--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity android:name=".Alert_activity" />
         <activity android:name=".Sample_Activity" />
         <activity android:name=".PhoneActivity" />
+        <activity android:name=".TestActivity" />
 
+        <service android:name=".TestService" />
     </application>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
